remove legacy/v1 wren engine and ibis server implementation