@@ -1,29 +1,27 @@
-### IBIS Server
-- Path: core/ibis-server
-- just install
-- just install-core
-- export WREN_ENGINE_ENDPOINT=http://localhost:8080
-- just run
+## Wren Toolkit Engine
 
-## Wren Engine Legacy
-- Path: core/wren-core-legacy
-- Update docker/etc/config.properties
-- ./mvnw clean install -DskipTests -P exec-jar
-- java -Dconfig=docker/etc/config.properties --add-opens=java.base/java.nio=ALL-UNNAMED -jar wren-server/target/wren-server-0.15.2-SNAPSHOT-**executable**.jar
+- Path: `toolkit/core/wren`
+- HTTP API: `wren-http`
+- Local install: `just install-http`
+- Local run: `just dev-http`
+- Default endpoint: `http://localhost:8000`
 
+The toolkit engine is the supported Wren engine path in this repository. It uses
+`wren-core-py`/Apache DataFusion for semantic planning and exposes the
+`/v2/connector/*` and `/v3/connector/*` compatibility routes used by the Wren UI
+and AI service.
 
 ## AI Service
-- Path: app/wren-ai-service
-- just init
-- Export OPENAI_API_KEY
-- just start
+
+- Path: `app/wren-ai-service`
+- Install: `just init`
+- Run: `just start`
 
 ## UI
-- Path: app/wren-ui
-- Update src/apollo/server/config.ts
-  - Update wrenAIEndpoint: 'http://localhost:5555' to wrenAIEndpoint: 'http://localhost:5556'
-- Update src/utils/validator/hostValidator.ts
-  - remove "127.0.0.1" from the list
-- env DB_TYPE=pg PG_URL=postgres://wren:wren123@localhost:5433/wren_ui_metadata  yarn migrate
-- env DB_TYPE=pg PG_URL=postgres://wren:wren123@localhost:5433/wren_ui_metadata OTHER_SERVICE_USING_DOCKER=true EXPERIMENTAL_ENGINE_RUST_VERSION=false PORT=3000 HOSTNAME=0.0.0.0 yarn build
-- env DB_TYPE=pg PG_URL=postgres://wren:wren123@localhost:5433/wren_ui_metadata OTHER_SERVICE_USING_DOCKER=true EXPERIMENTAL_ENGINE_RUST_VERSION=false PORT=3000 HOSTNAME=0.0.0.0 yarn start
+
+- Path: `app/wren-ui`
+- Configure `WREN_TOOLKIT_ENDPOINT=http://localhost:8000`
+- Configure `WREN_AI_ENDPOINT=http://localhost:5556`
+- ``` env DB_TYPE=pg PG_URL=postgres://wren:wren123@localhost:5433/wren_ui_metadata  yarn migrate ```
+- ``` env DB_TYPE=pg PG_URL=postgres://wren:wren123@localhost:5433/wren_ui_metadata OTHER_SERVICE_USING_DOCKER=true EXPERIMENTAL_ENGINE_RUST_VERSION=false PORT=3000 HOSTNAME=0.0.0.0 yarn build ```
+- ``` env DB_TYPE=pg PG_URL=postgres://wren:wren123@localhost:5433/wren_ui_metadata OTHER_SERVICE_USING_DOCKER=true EXPERIMENTAL_ENGINE_RUST_VERSION=false PORT=3000 HOSTNAME=0.0.0.0 yarn start ```
